@startuml

title __COMPONENT's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.CardContainerComponent {
          + CardContainerComponent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.CardMedia {
          + CardMedia()
          - naviga()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.CardPuntata {
          + CardPuntata()
          - naviga()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.CardScrollContainer {
          - content : HorizontalLayout
          + CardScrollContainer()
          + add()
          - preparePanel()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.ContainerPuntate {
          + ContainerPuntate()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.InfoMediaComponent {
          + InfoMediaComponent()
          - info()
          - retrieveCast()
          - retrieveGeneri()
          - retrieveRegista()
          - trailer()
          - votoMedio()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.InfoPuntataComponent {
          + InfoPuntataComponent()
          - info()
          - votoMedio()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.LocandinaComponent {
          + LocandinaComponent()
          - dettagliMedia()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.LoginComponent {
          - loginI18n : LoginI18n
          + LoginComponent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.RecensioneComponent {
          - divRecensionePadre : Div
          - divRiposte : Div
          - miPiaceButton : Button
          - nonMiPiaceButton : Button
          - numMiPiace : Paragraph
          - numNonMiPiace : Paragraph
          - rispondi : Button
          - segnalaRec : Button
          + RecensioneComponent()
          - miPiaceRetriever()
          - popcornHandler()
          - prepare()
          - prepareRecensioneDiv()
          - prepareRisposteDiv()
          - retrieveRisposte()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.RecensioniSectionComponent {
          - recensioni : Div
          + RecensioniSectionComponent()
          + populateRecensioni()
          + update()
          # prepare()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.RicercaComponent {
          ~ cerca : Button
          ~ comboBox : MultiselectComboBox<Genere>
          ~ ricercaPerTitolo : TextField
          + RicercaComponent()
          + toVertical()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.StagioneSection {
          ~ puntate : List<Puntata>
          + StagioneSection()
          - createComboBox()
          - prepare()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.component {
      class com.unisa.cinehub.views.component.Video {
          {static} - srcDescriptor : PropertyDescriptor<String, String>
          + Video()
          + Video()
          + getSrc()
          + setSrc()
      }
    }
  }
  

  com.unisa.cinehub.views.component.CardContainerComponent -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.component.CardMedia -up-|> com.vaadin.flow.component.orderedlayout.FlexLayout
  com.unisa.cinehub.views.component.CardMedia o-- com.unisa.cinehub.data.entity.Media : media
  com.unisa.cinehub.views.component.CardPuntata -up-|> com.vaadin.flow.component.orderedlayout.FlexLayout
  com.unisa.cinehub.views.component.CardScrollContainer -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.component.ContainerPuntate -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.component.InfoMediaComponent -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.component.InfoPuntataComponent -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.component.LocandinaComponent -up-|> com.vaadin.flow.component.html.Image
  com.unisa.cinehub.views.component.LoginComponent -up-|> com.vaadin.flow.component.login.LoginForm
  com.unisa.cinehub.views.component.RecensioneComponent -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.component.RecensioneComponent o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl
  com.unisa.cinehub.views.component.RecensioneComponent o-- com.unisa.cinehub.control.ModerazioneControl : moderazioneControl
  com.unisa.cinehub.views.component.RecensioneComponent o-- com.unisa.cinehub.data.entity.Recensione : recensione
  com.unisa.cinehub.views.component.RecensioneComponent o-- com.unisa.cinehub.views.component.form.RispostaFormDialog : rispostaFormDialog
  com.unisa.cinehub.views.component.RecensioniSectionComponent -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.component.RecensioniSectionComponent o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl
  com.unisa.cinehub.views.component.RecensioniSectionComponent o-- com.unisa.cinehub.control.GestioneCatalogoControl : gestioneCatalogoControl
  com.unisa.cinehub.views.component.RecensioniSectionComponent o-- com.unisa.cinehub.control.ModerazioneControl : moderazioneControl
  com.unisa.cinehub.views.component.RecensioniSectionComponent o-- com.unisa.cinehub.data.entity.Recensibile : recensibile
  com.unisa.cinehub.views.component.RicercaComponent -up-|> com.vaadin.flow.component.orderedlayout.HorizontalLayout
  com.unisa.cinehub.views.component.StagioneSection -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.component.StagioneSection o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl
  com.unisa.cinehub.views.component.StagioneSection o-- com.unisa.cinehub.views.component.ContainerPuntate : containerPuntate
  com.unisa.cinehub.views.component.StagioneSection o-- com.unisa.cinehub.data.entity.SerieTv : serie
  com.unisa.cinehub.views.component.Video .up.|> com.vaadin.flow.component.ClickNotifier
  com.unisa.cinehub.views.component.Video -up-|> com.vaadin.flow.component.HtmlContainer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
